game screen height fix on mobile
Former-commit-id: 18a25dbe795bb3bdaebaeb10ad5e82ba132843f3 [formerly 1bf334498f91d86843760c730e9353e7482c38b7] [formerly 732d5318062bfd98dc9c261b091ed07b0458dd46 [formerly 5059a6a0d1b728ea4e02f725d41cbf419385fee9]]
Former-commit-id: fd203e80b3f2af2203e98b25971837eb2f5b4c50 [formerly 24b14a7b1b80d3bfb17de66a462b283d08849e98]
Former-commit-id: d722643f0bc9d034f5d4c11fe38c80981505e136

--- a/src/styles/Games/gameView.module.scss
+++ b/src/styles/Games/gameView.module.scss
@@ -26,7 +26,7 @@
 
   .gameScreen {
     width: 100%;
-    flex: 1;
+    height: 100%;
   }
 
   .hiddenGameScreen {
